@@ -1,0 +1,3 @@
+#define LEFT_HANDED_MODE
+
+#include "../bepo_tm_style/keymap.c"
