@@ -1,0 +1,5 @@
+{
+    "modules": [
+        "zsa/defaults"
+    ]
+}
