@@ -1,0 +1,3 @@
+#define LEFT_HANDED_MODE
+
+#include "../../../../ergodox_ez/keymaps/bepo_tm_style/keymap.c"
